# crochet

./: .gitignore  Cargo.toml  LICENSE.md  build.crs
compiler/: Cargo.toml
example/: build.crs  build.toml
example/src/main/crochet/tutorial/: init.crs
example/src/main/crochet/tutorial/block/: block.crs  directional_block.crs
example/src/main/crochet/tutorial/block/entity/: block_appearance.crs  inventory.crs
example/src/main/crochet/tutorial/item/: items.crs  recipes.crs
example/src/main/resources/assets/tutorial/models/: vertical_slab.json
src/: buildfile.rs  main.rs  minecraft.rs  minecraft_jar.rs  util.rs
src/main/crochet/tutorial/: init.crs
src/main/crochet/tutorial/block/: block_state.crs
src/main/crochet/tutorial/block/entity/: block_entity.crs  color_provider.crs
src/main/crochet/tutorial/item/: armor.crs  enchantment.crs  items.crs  model_predicate_providers.crs  recipes.crs  tools.crs
