[package]
name = "crochet-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.3.15", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
indicatif = "0.17.5"

reqwest = "0.11.18"
tokio = { version = "1", features = ["full"]}
futures = "0.3.28"
rayon = "1.7.0"

toml = "0.7.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
json = "0.12.4"
semver = "1.0.17"

sha1 = "0.10.5"
hex = "0.4.3"

j4rs = "0.16.1"